# clock-model

./: README.md  readme.txt
models/: hourArrow.mtl  minuteArrow.mtl  secondArrow.mtl  stand.mtl  wheel.mtl
src/: CMakeLists.txt  ClockApplication.cpp  ClockApplication.hpp  Color.cpp  Color.hpp  CompoundModel.cpp  CompoundModel.hpp  GLFace.cpp  GLFace.hpp  GLTriangle.cpp  GLTriangle.hpp  GLVector.cpp  GLVector.hpp  GLVertex.cpp  GLVertex.hpp  Material.cpp  Material.hpp  Model.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PolygonalModel.cpp  PolygonalModel.hpp  Position.cpp  Position.hpp  Quaternion.cpp  Quaternion.hpp  Rotation.cpp  Rotation.hpp  Vector.cpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  clock.cpp
